<resources>
    <string name="app_name">Ready</string>
    <string name="student_email">Email</string>
    <string name="student_email_hint">Email</string>
    <string name="student_email_text">Email</string>
    <string name="student_pw_text">Password</string>
    <string name="student_password_hint">Password</string>
    <string name="student_pw2_text">Confirm Password</string>
    <string name="student_name">Name</string>
    <string name="student_id">Student ID</string>
    <string name="sign_up">Sign Up</string>
    <string name="student_phone">Phone</string>
    <string name="student_final_answer">Final Answer</string>
    <string name="student_upload_button">Upload</string>
    <string name="take_a_picture">Take a picture</string>
    <string name="register_radio_stu_title">Student</string>
    <string name="register_radio_tec_title">Teacher</string>
    <string name="messg_mark_title">Mark:</string>
    <string name="messg_status_title">Status:</string>
    <string name="student_mark">Mark:</string>
    <string name="quiz_button_title">Quiz</string>
    <string name="messg_button_title">Message</string>
    <string name="message_title">Message</string>
</resources>
