<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

<LinearLayout
    android:id="@+id/student_register_page"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".Student.StudentRegisterActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:layout_gravity="center"
        android:background="#F3F3F3">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_pic"
            android:layout_width="107dp"
            android:layout_height="104dp"
            android:src="@drawable/profile_pic"
            app:civ_border_color="@color/white"
            app:civ_border_width="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.473"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.907" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/student_email_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="5dp"
        android:text="@string/student_email_text"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/student_mail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="15dp"
        android:hint="@string/student_email_text"
        android:inputType="textEmailAddress"/>

    <TextView
        android:id="@+id/student_passord_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="5dp"
        android:text="@string/student_pw_text"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/student_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="15dp"
        android:ems="10"
        android:hint="@string/student_pw_text"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/student_pw2_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="5dp"
        android:text="@string/student_pw2_text"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/student_pw2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="15dp"
        android:ems="10"
        android:hint="@string/student_pw2_text"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/student_name_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="5dp"
        android:text="@string/student_name"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/student_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="15dp"
        android:ems="10"
        android:hint="@string/student_name"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/student_id_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="5dp"
        android:text="@string/student_id"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/student_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="15dp"
        android:ems="10"
        android:hint="@string/student_id"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/student_phone_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="5dp"
        android:text="@string/student_phone"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/student_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="15dp"
        android:ems="10"
        android:hint="@string/student_phone"
        android:inputType="phone" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/student_signup_button"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginTop="8dp"
            android:text="@string/sign_up"
            app:backgroundTint="#009688"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.467"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>
</ScrollView>
